[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Player/Player_0.png" type="Texture" id=1]
[ext_resource path="res://UI/Scripts/ShopItem.gd" type="Script" id=2]
[ext_resource path="res://UI/Themes/Shop Text.tres" type="Theme" id=3]
[ext_resource path="res://UI/Themes/Button Main.tres" type="Theme" id=4]

[node name="ShopItem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -848.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 10.0
margin_right = 590.0
margin_bottom = 175.0
color = Color( 0.803922, 0.937255, 0.964706, 1 )

[node name="picPreview" type="TextureRect" parent="."]
margin_left = 25.0
margin_right = 335.0
margin_bottom = 310.0
rect_scale = Vector2( 0.565, 0.565 )
texture = ExtResource( 1 )

[node name="btnInteract" type="Button" parent="."]
margin_left = 434.0
margin_top = 95.0
margin_right = 584.0
margin_bottom = 164.0
theme = ExtResource( 4 )
text = "Purchase"

[node name="lblPrice" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 225.0
margin_top = 114.0
margin_right = 390.0
margin_bottom = 150.0
theme = ExtResource( 3 )
text = "Price: 0"

[node name="lblName" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 225.0
margin_top = 30.0
margin_right = 525.0
margin_bottom = 66.0
theme = ExtResource( 3 )
text = "Wood"

[connection signal="pressed" from="btnInteract" to="." method="_on_btnInteract_pressed"]
